# recall

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: preload_models.py
src/recall/: __init__.py  config.py  main.py
src/recall/api/: __init__.py
src/recall/api/v1/: __init__.py  collections.py  dependencies.py  documents.py  search.py  tasks.py
src/recall/core/: __init__.py  utils.py
src/recall/core/embedders/: __init__.py  base.py  clip.py  factory.py  text.py
src/recall/core/transpiler/: __init__.py  qdrant.py
src/recall/core/vectordb/: __init__.py  base.py  factory.py  qdrant.py
src/recall/models/: __init__.py  collection.py  document.py  errors.py  search.py  task.py
src/recall/services/: __init__.py  ingestion.py  registry.py  schema_validator.py  search.py
src/recall/workers/: tasks.py
src/ui/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/ui/src/: App.tsx
src/ui/src/api/: recall.ts
src/ui/src/hooks/: useRecall.ts
src/ui/src/styles/: globals.css
src/ui/src/types/: recall.ts
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_api_collections.py  test_api_documents.py  test_api_search.py  test_e2e.py
tests/performance/: test_benchmarks.py
tests/unit/: conftest.py  test_config.py  test_embedders.py  test_errors.py  test_models.py  test_schema_validator.py  test_task_models.py  test_transpiler.py  test_utils.py
tests/unit/services/: test_ingestion.py  test_registry.py  test_search.py
(+17 files in other folders)
